--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
     width: 60%;
     padding: 25px 50px;
     border: 1px solid #e1e1e1;
+    background-color: #DDDFD9;
 }
 .table-color {
     background-color: aquamarine;
@@ -42,4 +43,7 @@ body {
         width: 100%;
         border: 1px solid #e1e1e1;
     }
+    .form-wrap{
+    padding: 10px 2px;
+}
 }
