--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
     padding: 25px 50px;
     border: 1px solid #e1e1e1;
     background-color: #DDDFD9;
+    color: #000000;
 }
 .table-color {
     background-color: aquamarine;
