--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
     margin: 0px;
 }
 body {
-    background-color: black;
-    color: white;
+    background-color: #F3E9E0;
+    color: #000000;
 }
 .wrap {
     margin: auto 90px;
